# jmcomic-bot-service

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  README.zh-CN.md  config.example.json  config.schema.json  docker-compose.yml
.github/workflows/: release.yml
scripts/: coverage.sh  install-offline.sh  install.sh  package-release.sh
src/: auth.rs  config.rs  db.rs  error.rs  image_processing.rs  jobs.rs  lib.rs  main.rs  models.rs  packaging.rs  routes.rs  signing.rs  worker_client.rs
systemd/: jmcomic-bot-service.service
tests/: download_flow.rs  upstream_real.rs
