[package]
name = "jmcomic-bot-service"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
axum = { version = "0.8.9", features = ["macros"] }
base64 = "0.22"
bytes = "1"
futures-util = "0.3"
hex = "0.4"
hmac = "0.12"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp"] }
md5 = "0.7"
mime_guess = "2"
printpdf = { version = "0.9.1", default-features = false, features = ["jpeg"] }
reqwest = { version = "0.12", default-features = false, features = ["brotli", "deflate", "gzip", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["macros", "runtime-tokio-rustls", "sqlite"] }
thiserror = "2"
time = { version = "0.3", features = ["formatting", "serde"] }
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread", "signal", "sync"] }
tokio-util = { version = "0.7", features = ["io"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["serde", "v4"] }
zip = { version = "4.6.1", default-features = false }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
wiremock = "0.6"
